--- a/Bayesian_inference_1/4.2-Model_improvements.qmd
+++ b/Bayesian_inference_1/4.2-Model_improvements.qmd
@@ -90,8 +90,12 @@ D
 ```{r}
 #| echo: false
 
-ggplot(D, aes(x = treatment, y = zooplankton, color = block)) +
-  geom_point(size = 3, position = position_jitter(width = 0.1))
+ggplot(D, aes(x = treatment, y = zooplankton, color = block, group = block)) +
+  geom_line() +
+  geom_point(size = 3) +
+  scale_color_discrete(name = "Block") +
+  scale_y_continuous(limits = c(0, 4.5)) +
+  labs(x = "Treatment", y = "Zooplankton Level")
 ```
 
 
@@ -154,7 +158,7 @@ mcmc_trace(fm,
            pars = c("sigma", "sd_block__Intercept"),
            regex_pars = "^b_",
            np = nuts_params(fm),
-           window = c(750, 850))
+           window = c(700, 900))
 ```
 
 
@@ -194,8 +198,12 @@ prior_summary(fm)
 ```{r}
 #| echo: false
 
-ggplot(D, aes(x = treatment, y = zooplankton, color = block)) +
-  geom_point(size = 3, position = position_jitter(width = 0.1))
+ggplot(D, aes(x = treatment, y = zooplankton, color = block, group = block)) +
+  geom_line() +
+  geom_point(size = 3) +
+  scale_color_discrete(name = "Block") +
+  scale_y_continuous(limits = c(0, 4.5)) +
+  labs(x = "Treatment", y = "Zooplankton Level")
 ```
 
 
@@ -249,6 +257,8 @@ summary(fm)
 
 ## Centered data
 
+- Don't set the lower bound to 0
+
 ```{r}
 #| echo: true
 #| output: false
@@ -284,6 +294,6 @@ $$Z_i = \frac{(Y_i - \bar{Y})}{sd(Y)}$$
 
 - Mean is 0
 - Units are now standard deviations
-    - More difficult to apply
+    - More difficult to interpret
 - Values >3 are very uncommon
 - Useful when predictors are on very different scales
