Update Viz PS 3

--- a/Data_visualization/Problem_Sets/PS_3.qmd
+++ b/Data_visualization/Problem_Sets/PS_3.qmd
@@ -14,7 +14,7 @@ format:
 #| echo: false
 #| message: false
 #| warning: false
-
+library(tidyverse)
 ```
 
 
@@ -31,7 +31,11 @@ The code chunk below makes a basic plot with some points. We don't care now abou
 - Resize the axis titles and labels so that the titles are larger and the labels smaller, such they they look proportionally correct in the rendered document. There is no one correct size. Choose something that looks good to you. Note that the plot in the RStudio plotting window might not look very good although the rendered document does.
 
 ```{r}
-
+ggplot(data = tibble(x = 1:10, y = runif(10)),
+       aes(x, y)) +
+  geom_point() +
+  theme(axis.title = element_text(face = "bold", size = 12),
+        axis.text = element_text(face = "italic", size = 10))
 ```
 
 Now put the `theme()` elements into a list and assign it to an object that so you can reuse the theme. Verify that you generate the same plot as above when you add your plot theme.
