--- a/Bayesian_inference_1/Bayes.bib
+++ b/Bayesian_inference_1/Bayes.bib
@@ -2902,33 +2902,6 @@
   doi      = "10.1037/met0000472"
 }
 
-@ARTICLE{Metropolis1953-lm,
-  title       = "Equation of State Calculations by Fast Computing Machines",
-  author      = "Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth,
-                 Marshall N and Teller, Augusta H and Teller, Edward",
-  abstract    = "A general method, suitable for fast computing machines, for
-                 investigating such properties as equations of state for
-                 substances consisting of interacting individual molecules is
-                 described. The method consists of a modified Monte Carlo
-                 integration over configuration space. Results for the
-                 two?dimensional rigid?sphere system have been obtained on the
-                 Los Alamos MANIAC and are presented here. These results are
-                 compared to the free volume equation of state and to a
-                 four?term virial coefficient expansion.",
-  journal     = "J. Chem. Phys.",
-  publisher   = "American Institute of Physics",
-  volume      =  21,
-  number      =  6,
-  pages       = "1087--1092",
-  month       =  jun,
-  year        =  1953,
-  url         = "https://doi.org/10.1063/1.1699114",
-  keywords    = "Bayes Readings;Module - Bayes",
-  issn        = "0021-9606",
-  doi         = "10.1063/1.1699114",
-  original_id = "d302fa8f-94c1-0dde-9189-c91923529ca0"
-}
-
 @BOOK{Johnson2022-db,
   title     = "Bayes Rules! An Introduction to Applied Bayesian Modeling",
   author    = "Johnson, Alicia A and Ott, Miles Q and Dogucu, Mine",
@@ -3059,30 +3032,6 @@
   issn     = "1069-9384, 1531-5320",
   pmid     = "28660424",
   doi      = "10.3758/s13423-017-1317-5"
-}
-
-@ARTICLE{Hastings1970-gr,
-  title     = "Monte Carlo Sampling Methods Using Markov Chains and Their
-               Applications",
-  author    = "Hastings, W K",
-  abstract  = "[A generalization of the sampling method introduced by
-               Metropolis et al. (1953) is presented along with an exposition
-               of the relevant theory, techniques of application and methods
-               and difficulties of assessing the error in Monte Carlo
-               estimates. Examples of the methods, including the generation of
-               random orthogonal matrices and potential applications of the
-               methods to numerical problems arising in statistics, are
-               discussed.]",
-  journal   = "Biometrika",
-  publisher = "[Oxford University Press, Biometrika Trust]",
-  volume    =  57,
-  number    =  1,
-  pages     = "97--109",
-  year      =  1970,
-  url       = "http://www.jstor.org/stable/2334940",
-  keywords  = "Module - Bayes",
-  issn      = "0006-3444",
-  doi       = "10.2307/2334940"
 }
 
 @ARTICLE{Geman1984-bc,
@@ -3277,71 +3226,132 @@
   original_id = "25b2586b-495a-05bb-969d-36a9c4cbec5b"
 }
 
-@ARTICLE{Kruschke2010-wi,
-  title    = "What to believe: Bayesian methods for data analysis",
-  author   = "Kruschke, John K",
-  abstract = "Although Bayesian models of mind have attracted great interest
-              from cognitive scientists, Bayesian methods for data analysis
-              have not. This article reviews several advantages of Bayesian
-              data analysis over traditional null-hypothesis significance
-              testing. Bayesian methods provide tremendous flexibility for data
-              analytic models and yield rich information about parameters that
-              can be used cumulatively across progressive experiments. Because
-              Bayesian statistical methods can be applied to any data,
-              regardless of the type of cognitive model (Bayesian or otherwise)
-              that motivated the data collection, Bayesian methods for data
-              analysis will continue to be appropriate even if Bayesian models
-              of mind lose their appeal.",
-  journal  = "Trends Cogn. Sci.",
-  volume   =  14,
-  number   =  7,
-  pages    = "293--300",
-  month    =  jul,
-  year     =  2010,
-  url      = "http://dx.doi.org/10.1016/j.tics.2010.05.001",
-  keywords = "Module - Bayes",
-  language = "en",
-  issn     = "1364-6613, 1879-307X",
-  pmid     = "20542462",
-  doi      = "10.1016/j.tics.2010.05.001"
+@ARTICLE{Kruschke2012-sb,
+  title       = "The Time Has Come: Bayesian Methods for Data Analysis in the
+                 Organizational Sciences",
+  author      = "Kruschke, John K and Aguinis, Herman and Joo, Harry",
+  abstract    = "The use of Bayesian methods for data analysis is creating a
+                 revolution in fields ranging from genetics to marketing. Yet,
+                 results of our literature review, including more than 10,000
+                 articles published in 15 journals from January 2001 and
+                 December 2010, indicate that Bayesian approaches are
+                 essentially absent from the organizational sciences. Our
+                 article introduces organizational science researchers to
+                 Bayesian methods and describes why and how they should be
+                 used. We use multiple linear regression as the framework to
+                 offer a step-by-step demonstration, including the use of
+                 software, regarding how to implement Bayesian methods. We
+                 explain and illustrate how to determine the prior
+                 distribution, compute the posterior distribution, possibly
+                 accept the null value, and produce a write-up describing the
+                 entire Bayesian process, including graphs, results, and their
+                 interpretation. We also offer a summary of the advantages of
+                 using Bayesian analysis and examples of how specific published
+                 research based on frequentist analysis-based approaches failed
+                 to benefit from the advantages offered by a Bayesian approach
+                 and how using Bayesian analyses would have led to richer and,
+                 in some cases, different substantive conclusions. We hope that
+                 our article will serve as a catalyst for the adoption of
+                 Bayesian methods in organizational science research.",
+  journal     = "Organizational Research Methods",
+  publisher   = "SAGE Publications Inc",
+  volume      =  15,
+  number      =  4,
+  pages       = "722--752",
+  month       =  oct,
+  year        =  2012,
+  url         = "https://doi.org/10.1177/1094428112457829",
+  keywords    = "Quantitative Methods;Module - Bayes",
+  issn        = "1094-4281",
+  doi         = "10.1177/1094428112457829",
+  original_id = "aad5e5b4-af55-0e19-8cb6-fc0f745b6805"
 }
 
-@ARTICLE{Kruschke2012-sb,
-  title     = "The Time Has Come: Bayesian Methods for Data Analysis in the
-               Organizational Sciences",
-  author    = "Kruschke, John K and Aguinis, Herman and Joo, Harry",
-  abstract  = "The use of Bayesian methods for data analysis is creating a
-               revolution in fields ranging from genetics to marketing. Yet,
-               results of our literature review, including more than 10,000
-               articles published in 15 journals from January 2001 and December
-               2010, indicate that Bayesian approaches are essentially absent
-               from the organizational sciences. Our article introduces
-               organizational science researchers to Bayesian methods and
-               describes why and how they should be used. We use multiple
-               linear regression as the framework to offer a step-by-step
-               demonstration, including the use of software, regarding how to
-               implement Bayesian methods. We explain and illustrate how to
-               determine the prior distribution, compute the posterior
-               distribution, possibly accept the null value, and produce a
-               write-up describing the entire Bayesian process, including
-               graphs, results, and their interpretation. We also offer a
-               summary of the advantages of using Bayesian analysis and
-               examples of how specific published research based on frequentist
-               analysis-based approaches failed to benefit from the advantages
-               offered by a Bayesian approach and how using Bayesian analyses
-               would have led to richer and, in some cases, different
-               substantive conclusions. We hope that our article will serve as
-               a catalyst for the adoption of Bayesian methods in
-               organizational science research.",
-  journal   = "Organizational Research Methods",
-  publisher = "SAGE Publications Inc",
-  volume    =  15,
+@ARTICLE{Kruschke2010-wi,
+  title       = "What to believe: Bayesian methods for data analysis",
+  author      = "Kruschke, John K",
+  abstract    = "Although Bayesian models of mind have attracted great interest
+                 from cognitive scientists, Bayesian methods for data analysis
+                 have not. This article reviews several advantages of Bayesian
+                 data analysis over traditional null-hypothesis significance
+                 testing. Bayesian methods provide tremendous flexibility for
+                 data analytic models and yield rich information about
+                 parameters that can be used cumulatively across progressive
+                 experiments. Because Bayesian statistical methods can be
+                 applied to any data, regardless of the type of cognitive model
+                 (Bayesian or otherwise) that motivated the data collection,
+                 Bayesian methods for data analysis will continue to be
+                 appropriate even if Bayesian models of mind lose their appeal.",
+  journal     = "Trends Cogn. Sci.",
+  volume      =  14,
+  number      =  7,
+  pages       = "293--300",
+  month       =  jul,
+  year        =  2010,
+  url         = "http://dx.doi.org/10.1016/j.tics.2010.05.001",
+  keywords    = "Quantitative Methods;Module - Bayes",
+  language    = "en",
+  issn        = "1364-6613, 1879-307X",
+  pmid        = "20542462",
+  doi         = "10.1016/j.tics.2010.05.001",
+  original_id = "dc528758-9291-031d-a6d6-5f27d4dd9f3a"
+}
+
+@ARTICLE{Metropolis1953-tc,
+  title       = "Equation of state calculations by fast computing machines",
+  author      = "Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth,
+                 Marshall N and Teller, Augusta H and Teller, Edward",
+  abstract    = "A general method, suitable for fast computing machines, for
+                 investigating such properties as equations of state for
+                 substances consisting of interacting individual molecules is
+                 described. The method consists of a modified Monte Carlo
+                 integration over configuration space. Results for the
+                 two?dimensional rigid?sphere system have been obtained on the
+                 Los Alamos MANIAC and are presented here. These results are
+                 compared to the free volume equation of state and to a
+                 four?term virial coefficient expansion.",
+  journal     = "J. Chem. Phys.",
+  publisher   = "American Institute of Physics",
+  volume      =  21,
+  number      =  6,
+  pages       = "1087--1092",
+  month       =  jun,
+  year        =  1953,
+  url         = "http://aip.scitation.org/doi/abs/10.1063/1.1699114",
+  keywords    = "Bayes Readings;Module - Bayes",
+  issn        = "0021-9606",
+  doi         = "10.1063/1.1699114",
+  original_id = "d302fa8f-94c1-0dde-9189-c91923529ca0"
+}
+
+@ARTICLE{Yao2022-ti,
+  title     = "Bayesian Hierarchical Stacking: Some Models Are (Somewhere)
+               Useful",
+  author    = "Yao, Yuling and Pirš, Gregor and Vehtari, Aki and Gelman, Andrew",
+  abstract  = "Stacking is a widely used model averaging technique that
+               asymptotically yields optimal predictions among linear averages.
+               We show that stacking is most effective when model predictive
+               performance is heterogeneous in inputs, and we can further
+               improve the stacked mixture with a hierarchical model. We
+               generalize stacking to Bayesian hierarchical stacking. The model
+               weights are varying as a function of data, partially-pooled, and
+               inferred using Bayesian inference. We further incorporate
+               discrete and continuous inputs, other structured priors, and
+               time series and longitudinal data. To verify the performance
+               gain of the proposed method, we derive theory bounds, and
+               demonstrate on several applied problems.",
+  journal   = "Bayesian Analysis",
+  publisher = "International Society for Bayesian Analysis",
+  volume    =  17,
   number    =  4,
-  pages     = "722--752",
-  month     =  oct,
-  year      =  2012,
-  url       = "https://doi.org/10.1177/1094428112457829",
-  keywords  = "Module - Bayes",
-  issn      = "1094-4281",
-  doi       = "10.1177/1094428112457829"
+  pages     = "1043--1071",
+  month     =  dec,
+  year      =  2022,
+  url       = "http://dx.doi.org/10.1214/21-BA1287",
+  keywords  = "Bayesian hierarchical modeling; conditional prediction;
+               covariate shift; model averaging; prior construction; stacking;
+               ;Module - Bayes",
+  language  = "en",
+  issn      = "1936-0975, 1931-6690",
+  doi       = "10.1214/21-BA1287"
 }
