--- a/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
+++ b/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
@@ -54,10 +54,12 @@ Use `install.packages()` to install these packages:
 - `posterior`
 - `tidybayes`
 - `HDInterval`
+- `truncnorm`
 
 ```
 install.packages(c("coda", "rstan", "brms", "bayesplot",
-                   "posterior", "tidybayes", "HDinterval"))
+                   "posterior", "tidybayes", "HDinterval",
+                   "truncnorm"))
 ```
 
 *Packages not available from CRAN*:
